--- a/searchfromvoterlist1.html
+++ b/searchfromvoterlist1.html
@@ -48,36 +48,36 @@
     </thead>
     <tbody>
         <tr>
-            <td>294</td>
-            <td>PCMC school number 55, South North Bldg, Ground Floor, South Side Room number 2, Rahatani</td>
+            <td><a href="294.pdf" target="_blank">294</a></td>
+            <td><a href="https://maps.app.goo.gl/ZU8CGXV1FfM7vMCV8"  target="_blank"> PCMC school number 55, South North Bldg, Ground Floor, South Side Room number 2, Rahatani</a></td>
         </tr>
         <tr>
-            <td>295</td>
-            <td>PCMC school number 55, South North Bldg, Ground Floor, South Side Room number 1, Rahatani</td>
+            <td><a href="295.pdf" target="_blank">295</a></td>
+            <td><a href="https://maps.app.goo.gl/ZU8CGXV1FfM7vMCV8"  target="_blank"> PCMC school number 55, South North Bldg, Ground Floor, South Side Room number 1, Rahatani</a></td>
         </tr>
         <tr>
-            <td>296</td>
-            <td>PCMC school number 55, East West Bldg, Ground Floor, From east side room number 3, Rahatani</td>
+            <td><a href="296.pdf" target="_blank">296</a></td>
+            <td><a href="https://maps.app.goo.gl/ZU8CGXV1FfM7vMCV8"  target="_blank"> PCMC school number 55, East West Bldg, Ground Floor, From east side room number 3, Rahatani</a></td>
         </tr>
         <tr>
-            <td>297</td>
-            <td>PCMC school number 55, East West Bldg, Ground Floor, From east side room number 2, Rahatani</td>
+            <td><a href="297.pdf" target="_blank">297</a></td>
+            <td><a href="https://maps.app.goo.gl/ZU8CGXV1FfM7vMCV8"  target="_blank"> PCMC school number 55, East West Bldg, Ground Floor, From east side room number 2, Rahatani</a></td>
         </tr>
         <tr>
-            <td>298</td>
-            <td>PCMC school number 55, East West Bldg, Ground Floor, From east side room number 1, Rahatani</td>
+            <td><a href="298.pdf" target="_blank">298</a></td>
+            <td><a href="https://maps.app.goo.gl/ZU8CGXV1FfM7vMCV8"  target="_blank"> PCMC school number 55, East West Bldg, Ground Floor, From east side room number 1, Rahatani</a></td>
         </tr>
         <tr>
-            <td>299</td>
-            <td>Maharishi Vidya Mandir High Sch and Jr Clg, Grd Flr, from east side parking room number 1, Shrinagar, Rahatani</td>
+            <td><a href="299.pdf" target="_blank">299</a></td>
+            <td><a href="https://maps.app.goo.gl/XfASq3tJM3zxg85UA" target="_blank">Maharishi Vidya Mandir High Sch and Jr Clg, Grd Flr, from east side parking room number 1, Shrinagar, Rahatani</a></td>
         </tr>
         <tr>
-            <td>300</td>
-            <td>Maharishi Vidya Mandir High Sch and Jr Clg, Grd Flr, from east side parking room number 2, Shrinagar, Rahatani</td>
+            <td><a href="300.pdf" target="_blank">300</a></td>
+            <td><a href="https://maps.app.goo.gl/XfASq3tJM3zxg85UA" target="_blank">Maharishi Vidya Mandir High Sch and Jr Clg, Grd Flr, from east side parking room number 2, Shrinagar, Rahatani</a></td>
         </tr>
         <tr>
-            <td>301</td>
-            <td>Five Garden cooperative housing society club house room number 1 rahatani</td>
+            <td><a href="301.pdf" target="_blank">301</a></td>
+            <td><a href="https://maps.app.goo.gl/j7Up75u76XyWgCS98" target="_blank">Five Garden cooperative housing society club house room number 1 rahatani</a></td>
         </tr>
     </tbody>
 </table>
