--- a/searchfromvoterlist1.html
+++ b/searchfromvoterlist1.html
@@ -11,6 +11,7 @@
     }
     .search-box {
       margin-bottom: 20px;
+      text-align: center;
     }
     .results {
       list-style: none;
@@ -22,13 +23,15 @@
       background: #f0f0f0;
       border-radius: 4px;
       display: grid;
+      text-align: center;
     }
     table {
-            width: 100%;
+            width: 80%;
             border-collapse: collapse;
             margin: 20px auto;
         }
         th, td {
+            font-size: small;
             border: 1px solid #ddd;
             padding: 8px;
             text-align: center;
