--- a/searchfromvoterlist2.html
+++ b/searchfromvoterlist2.html
@@ -8773,7 +8773,7 @@
 "MAHENDRA JAYANT SEA 205 309",
 "SUBHASH RAMCHANDRA SHETTE 206 309",
 "AOHIJEST SUBHASH SHETTE 207 309",
-"PRAFL VILAS SHIRKE 208 309",
+"PRAFULL VILAS SHIRKE 208 309",
 "RAJU RAMUJ SHRIVASTAVA 209 309",
 "SHOBHA ASHOK SOLANKE 210 309",
 "POOJA SHIVALISURYAVANSHI 211 309",
